# pysway

./: README.md  pyproject.toml
pysway/: __init_.py  ipc.py
pysway/extra/: utils.py
scripts/: get_focused_view.py  get_view.py  list_views.py
