[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysway"
version = "0.1.0"
description = "Python bindings for interacting with Sway compositor via IPC, inspired by pywayfire"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["sway", "wayland", "ipc", "window-manager", "tiling"]

authors = [{ name = "Your Name", email = "you@example.com" }]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Desktop Environment :: Window Managers",
  "Topic :: Software Development :: Libraries",
]

dependencies = ["cffi>=1.12.0", "i3ipc>=2.2.0"]

[project.urls]
Homepage = "https://github.com/yourusername/pysway "
Repository = "https://github.com/yourusername/pysway "
Bug-Tracker = "https://github.com/yourusername/pysway/issues "

[tool.setuptools.packages.find]
where = ["."]
